[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-decision-flow"
version = "2.1.0"
description = "Quantum-inspired geometric transformation toolkit using Hamiltonian time evolution on classical datasets."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Christopher Altman" }
]

dependencies = [
  "pennylane>=0.36,<0.40",
  "autoray>=0.6.0,<0.7.0",
  "numpy>=1.21,<2.0",
  "matplotlib>=3.5",
  "scikit-learn>=1.0",
  "scipy>=1.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "jupyter>=1.0",
]